--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,15 +6,17 @@
   @apply bg-white py-8 px-6 shadow rounded-xl sm:px-10;
 }
 
-button {
-  @apply px-4
-  rounded-md
-  shadow-sm
-  text-sm
-  font-medium
-  text-white
-  bg-indigo-600
-  hover:bg-indigo-700
-  focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500
-  h-[42px];
+@layer base {
+  button {
+    @apply px-4
+    rounded-md
+    shadow-sm
+    text-sm
+    font-medium
+    text-white
+    bg-sogreen-600
+    hover:bg-indigo-700
+    focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500
+    h-[42px];
+  }
 }
